Fix header and data validation

--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -43,7 +43,7 @@
     <div id="fighterRecordApp">
       <form v-on:submit="handleSubmit" class="form-style">
 
-       
+
           <div class="sizing">
               <center><h4 style="text-decoration-line: underline">Fighter Registration Form</h4></center>
               <br>
@@ -156,6 +156,7 @@
       </form>
     </div>
 
+    <strong id="error_show" size='2' style='color:red;font-size:20px; display:none'>You need to fill in all the blank!</strong>
 
   </main>
   <div class="wrapper row3">
