--- a/app/public/index.html
+++ b/app/public/index.html
@@ -25,8 +25,8 @@
           <h1>Oconee County Fire Rescue</h1>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="index.html">OCFR</a>
+        <nav class="navbar navbar-expand-lg navbar-dark">
+
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
