--- a/app/public/Certification.html
+++ b/app/public/Certification.html
@@ -67,7 +67,7 @@
                 </select>
               </li>
               <li>
-                        <label for="InputMemberId" class="label-style">Select a Certification:  </label><select class="field-style field-split" id="inputCertificationId" v-model=recordEnrollment.CertificationId>
+                        <label for="InputCertifictionId" class="label-style">Select a Certification:  </label><select class="field-style field-split" id="inputCertificationId" v-model=recordEnrollment.CertificationId>
                   <option v-for="c in certs" v-bind:value="c.CertificationId">{{ c.Name }}</option>
                 </select>
               </li>
