working on delete

--- a/app/public/All.html
+++ b/app/public/All.html
@@ -58,6 +58,7 @@
       <div class="container">
         <div class="row">
           <div id="fighterApp" class="col-md-12 queueView">
+            <form action="" method="post">
               <table class="table">
                 <thead>
                   <tr>
@@ -85,6 +86,7 @@
                     </tr>
                 </tbody>
               </table>
+            </form>
             <!-- <form @submit.prevent="handleSubmit">
               <input :value="deleteFighter.MemberId">
               </input>
