--- a/app/public/All.html
+++ b/app/public/All.html
@@ -14,7 +14,7 @@
   <div class="wrapper row1">
     <header id="header" class="clear">
       <div id="hgroup">
-          <h1>Oconee County Fire Rescue</h1>
+          <h1>Oconee County Fire Rescue lol</h1>
       </div>
 
               <nav class="navbar navbar-expand-lg navbar-dark">
