--- a/app/public/All.html
+++ b/app/public/All.html
@@ -58,7 +58,7 @@
       <div class="container">
         <div class="row">
           <div id="fighterApp" class="col-md-12 queueView">
-            <form action="" method="post">
+            <form method="post">
               <table class="table">
                 <thead>
                   <tr>
@@ -78,6 +78,9 @@
                       <td>{{ f.RadioNum }}</td>
                       <td>{{ f.Email }}</td>
                       <td>{{ f.MemberId }}</td>
+                      <td>
+                        <input type="submit" name="delete" :value="f.MemberId">
+                      </td>
                       <!-- <td>
                         <form v-model="deleteFighter.MemberId" @submit.prevent="handleSubmit">
                           <input type='submit' :value='f.MemberId'></input>
