working on detailed view some more

--- a/app/public/certAdd.html
+++ b/app/public/certAdd.html
@@ -72,23 +72,23 @@
           <div id="container" class="clear">
 
             <div class="form-group row">
-              <label for="inputFirstName" class="form-group col-md-6">Name</label>
+              <label for="inputName" class="form-group col-md-6">Name</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="inputName" placeholder="Certification Name" v-model="recordCert.Name">
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="inputLastName" class="form-group col-md-6">Description</label>
+              <label for="inputCertifyAgency" class="form-group col-md-6">Agency</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputDescription" placeholder="Description" v-model="recordCert.Description">
+                <input type="text" class="form-control" id="inputCertifyAgency" placeholder="Agency" v-model="recordCert.CertifyAgency">
               </div>
             </div>
 
             <div class="form-group row">
-              <label for="inputGender" class="form-group col-md-6">Valid Time</label>
+              <label for="inputExpirationPeriod" class="form-group col-md-6">Valid Time</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputValidTime" placeholder="# Years/Months" v-model="recordCert.ValidTime">
+                <input type="text" class="form-control" id="inputExpirationPeriod" placeholder="# Years/Months" v-model="recordCert.ExpirationPeriod">
               </div>
             </div>
 
