--- a/app/public/fighterDetails.html
+++ b/app/public/fighterDetails.html
@@ -65,7 +65,7 @@
   </div>
 
   <main>
-    <div id="fighterApp">
+    <div id="fDetailApp">
       <form v-on:submit="handleSubmit" class="form-style">
 
 
@@ -75,107 +75,81 @@
 
 <ul>
   <li>
-
       <label for="inputFirstName" class="label-style">First Name: </label>
-      <input type="text" id="inputFirstName" placeholder="First Name" class="field-style field-split" v-model="recordFighter.FirstName">
+      <input type="text" id="inputFirstName" :value="fighter.FirstName" class="field-style field-split" v-model="fighter.FirstName">
+  </li>
 
-</li>
+  <li>
+    <label for="inputLastName" class="label-style">Last Name: </label>
+    <input type="text" class="field-style field-split" id="inputLastName" :value="fighter.LastName" v-model="fighter.LastName">
+  </li>
 
-<li>
+  <li>
+    <label for="inputGender" class="label-style">Gender: </label>
+    <input type="text" class="field-style field-split" id="inputGender" :value="Fighter.Gender" v-model="fighter.Gender">
+  </li>
 
+  <li>
+    <label for="inputDateOfBirth" class="label-style">Date of Birth: </label>
+    <input type="text" class="field-style field-split" id="inputDateOfBirth" :value="fighter.DateOfBirth" v-model="fighter.DateOfBirth">
+  </li>
 
-                  <label for="inputLastName" class="label-style">Last Name: </label>
-    <input type="text" class="field-style field-split" id="inputLastName" placeholder="Last Name" v-model="recordFighter.LastName">
-</li>
+  <li>
+    <label for="inputStreet" class="label-style">Street Address: </label>
+    <input type="text" class="field-style field-split" id="inputStreet" :value="fighter.Street" v-model="fighter.Street">
+  </li>
 
-<li>
+  <li>
+    <label for="inputCity" class="label-style">City: </label>
+    <input type="text" class="field-style field-split" id="inputCity" :value="fighter.City" v-model="fighter.City">
+  </li>
 
+  <li>
+    <label for="inputState" class="label-style">State: </label>
+    <input type="text" class="field-style field-split" id="inputState" :value="fighter.State" v-model="fighter.State">
+  </li>
 
-                  <label for="inputGender" class="label-style">Gender: </label>
-    <input type="text" class="field-style field-split" id="inputGender" placeholder="Male/Female" v-model="recordFighter.Gender">
-</li>
+  <li>
+    <label for="inputZip" class="label-style">Zip: </label>
+    <input type="text" class="field-style field-split align-left" id="inputZip" :value="fighter.ZipCode" v-model="fighter.ZipCode">
+  </li>
 
+  <li>
+   <label for="inputWorkPhone" class="label-style">Work Phone: </label>
+   <input type="text" class="field-style field-split" id="inputWorkphone" :value="fighter.WorkNum" v-model="fighter.WorkNum">
+  </li>
 
-<li>
+  <li>
+    <label for="inputMobilePhone" class="label-style">Mobile Phone: </label>
+    <input type="text" class="field-style field-split" id="inputMobilephone" :value="fighter.MobileNum" v-model="fighter.MobileNum">
+  </li>
 
+  <li>
+    <label for="inputRadioNum" class="label-style">Radio Number: </label>
+    <input type="text" class="field-style field-split" id="inputRadioNum" :value="fighter.RadioNum" v-model="fighter.RadioNum">
+  </li>
 
-                            <label for="inputDateOfBirth" class="label-style">Date of Birth: </label>
-    <input type="text" class="field-style field-split" id="inputDateOfBirth" placeholder="MM/DD/YYYY" v-model="recordFighter.DateOfBirth">
-</li>
+  <li>
+    <label for="inputStationNum" class="label-style">Station Number: </label>
+    <input type="text" class="field-style field-split" id="inputStationNum" :value="fighter.StationNum" v-model="fighter.StationNum">
+  </li>
 
+  <li>
+    <label for="inputEmail" class="label-style">Email: </label>
+    <input type="email" class="field-style field-split" id="inputEmail" :value="fighter.Email" v-model="fighter.Email">
+  </li>
 
-<li>
+  <li>
+    <label for="inputIsActive" class="label-style">Active: </label>
+    <input type="text" class="field-style field-split" id="inputIsActive" :value="fighter.IsActive" v-model="fighter.IsActive">
+  </li>
 
+  <br>
 
-                                <label for="inputStreet" class="label-style">Street Address: </label>
-    <input type="text" class="field-style field-split" id="inputStreet" placeholder="Street" v-model="recordFighter.Street">
-</li>
-<li>
-
-
-
-                     <label for="inputCity" class="label-style">City: </label>
-    <input type="text" class="field-style field-split" id="inputCity" placeholder="City" v-model="recordFighter.City">
-</li>
-
-<li>
-
-
-                 <label for="inputState" class="label-style">State: </label>
-    <input type="text" class="field-style field-split" id="inputState" placeholder="State" v-model="recordFighter.State">
-</li>
-
-<li>
-
-
-
-                 <label for="inputZip" class="label-style">Zip: </label>
-    <input type="text" class="field-style field-split align-left" id="inputZip" placeholder="Zip" v-model="recordFighter.ZipCode">
-
-</li>
-
-<li>
-
-
-                 <label for="inputWorkPhone" class="label-style">Work Phone: </label><input type="text" class="field-style field-split" id="inputWorkphone" placeholder="Work Phone" v-model="recordFighter.WorkNum">
-
-</li>
-<li>
-
-
-
-
-                 <label for="inputMobilePhone" class="label-style">Mobile Phone: </label>
-    <input type="text" class="field-style field-split" id="inputMobilephone" placeholder="Mobile Phone" v-model="recordFighter.MobileNum">
-</li>
-
-<li>
-
-
-
-                 <label for="inputRadioNum" class="label-style">Radio Number: </label><input type="text" class="field-style field-split" id="inputRadioNum" placeholder="Radio Number" v-model="recordFighter.RadioNum">
-
-</li>
-<li>
-
-
-
-                 <label for="inputStationNum" class="label-style">Station Number: </label>
-    <input type="text" class="field-style field-split" id="inputStationNum" placeholder="Station Number" v-model="recordFighter.StationNum">
-</li>
-<li>
-
-
-
-                 <label for="inputEmail" class="label-style">Email: </label>
-    <input type="email" class="field-style field-split" id="inputEmail" placeholder="Email" v-model="recordFighter.Email">
-</li>
-
-<br>
-<li>
-              <input type="submit" class="field-style">
-            </li>
-  </ul>
+  <li>
+    <input type="submit" class="field-style">
+  </li>
+</ul>
           </div>
         </div>
       </form>
@@ -190,6 +164,6 @@
   </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script src="js/recordFighter.app.js"></script>
+  <script src="js/fighterDetail.app.js"></script>
 </body>
 </html>
