--- a/app/public/All.html
+++ b/app/public/All.html
@@ -95,94 +95,94 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="container" id="fDetailApp">
         <form v-on:submit="handleSubmit" class="form-style">
+          <div class="sizing">
+            <center>
+              <h4 style="text-decoration-line: underline">Fighter Registration Form</h4>
+            </center>
+            <br>
 
+            <ul>
+              <li>
+                <label for="inputFirstName" class="label-style">First Name: </label>
+                <input type="text" id="inputFirstName" :value="fighter.FirstName" class="field-style field-split" v-model="fighter.FirstName">
+              </li>
 
-            <div class="sizing">
-                <center><h4 style="text-decoration-line: underline">Fighter Registration Form</h4></center>
-                <br>
+              <li>
+                <label for="inputLastName" class="label-style">Last Name: </label>
+                <input type="text" class="field-style field-split" id="inputLastName" :value="fighter.LastName" v-model="fighter.LastName">
+              </li>
 
-  <ul>
-    <li>
-        <label for="inputFirstName" class="label-style">First Name: </label>
-        <input type="text" id="inputFirstName" :value="fighter.FirstName" class="field-style field-split" v-model="fighter.FirstName">
-    </li>
+              <li>
+                <label for="inputGender" class="label-style">Gender: </label>
+                <input type="text" class="field-style field-split" id="inputGender" :value="Fighter.Gender" v-model="fighter.Gender">
+              </li>
 
-    <li>
-      <label for="inputLastName" class="label-style">Last Name: </label>
-      <input type="text" class="field-style field-split" id="inputLastName" :value="fighter.LastName" v-model="fighter.LastName">
-    </li>
+              <li>
+                <label for="inputDateOfBirth" class="label-style">Date of Birth: </label>
+                <input type="text" class="field-style field-split" id="inputDateOfBirth" :value="fighter.DateOfBirth" v-model="fighter.DateOfBirth">
+              </li>
 
-    <li>
-      <label for="inputGender" class="label-style">Gender: </label>
-      <input type="text" class="field-style field-split" id="inputGender" :value="Fighter.Gender" v-model="fighter.Gender">
-    </li>
+              <li>
+                <label for="inputStreet" class="label-style">Street Address: </label>
+                <input type="text" class="field-style field-split" id="inputStreet" :value="fighter.Street" v-model="fighter.Street">
+              </li>
 
-    <li>
-      <label for="inputDateOfBirth" class="label-style">Date of Birth: </label>
-      <input type="text" class="field-style field-split" id="inputDateOfBirth" :value="fighter.DateOfBirth" v-model="fighter.DateOfBirth">
-    </li>
+              <li>
+                <label for="inputCity" class="label-style">City: </label>
+                <input type="text" class="field-style field-split" id="inputCity" :value="fighter.City" v-model="fighter.City">
+              </li>
 
-    <li>
-      <label for="inputStreet" class="label-style">Street Address: </label>
-      <input type="text" class="field-style field-split" id="inputStreet" :value="fighter.Street" v-model="fighter.Street">
-    </li>
+              <li>
+                <label for="inputState" class="label-style">State: </label>
+                <input type="text" class="field-style field-split" id="inputState" :value="fighter.State" v-model="fighter.State">
+              </li>
 
-    <li>
-      <label for="inputCity" class="label-style">City: </label>
-      <input type="text" class="field-style field-split" id="inputCity" :value="fighter.City" v-model="fighter.City">
-    </li>
+              <li>
+                <label for="inputZip" class="label-style">Zip: </label>
+                <input type="text" class="field-style field-split align-left" id="inputZip" :value="fighter.ZipCode" v-model="fighter.ZipCode">
+              </li>
 
-    <li>
-      <label for="inputState" class="label-style">State: </label>
-      <input type="text" class="field-style field-split" id="inputState" :value="fighter.State" v-model="fighter.State">
-    </li>
+              <li>
+               <label for="inputWorkPhone" class="label-style">Work Phone: </label>
+               <input type="text" class="field-style field-split" id="inputWorkphone" :value="fighter.WorkNum" v-model="fighter.WorkNum">
+              </li>
 
-    <li>
-      <label for="inputZip" class="label-style">Zip: </label>
-      <input type="text" class="field-style field-split align-left" id="inputZip" :value="fighter.ZipCode" v-model="fighter.ZipCode">
-    </li>
+              <li>
+                <label for="inputMobilePhone" class="label-style">Mobile Phone: </label>
+                <input type="text" class="field-style field-split" id="inputMobilephone" :value="fighter.MobileNum" v-model="fighter.MobileNum">
+              </li>
 
-    <li>
-     <label for="inputWorkPhone" class="label-style">Work Phone: </label>
-     <input type="text" class="field-style field-split" id="inputWorkphone" :value="fighter.WorkNum" v-model="fighter.WorkNum">
-    </li>
+              <li>
+                <label for="inputRadioNum" class="label-style">Radio Number: </label>
+                <input type="text" class="field-style field-split" id="inputRadioNum" :value="fighter.RadioNum" v-model="fighter.RadioNum">
+              </li>
 
-    <li>
-      <label for="inputMobilePhone" class="label-style">Mobile Phone: </label>
-      <input type="text" class="field-style field-split" id="inputMobilephone" :value="fighter.MobileNum" v-model="fighter.MobileNum">
-    </li>
+              <li>
+                <label for="inputStationNum" class="label-style">Station Number: </label>
+                <input type="text" class="field-style field-split" id="inputStationNum" :value="fighter.StationNum" v-model="fighter.StationNum">
+              </li>
 
-    <li>
-      <label for="inputRadioNum" class="label-style">Radio Number: </label>
-      <input type="text" class="field-style field-split" id="inputRadioNum" :value="fighter.RadioNum" v-model="fighter.RadioNum">
-    </li>
+              <li>
+                <label for="inputEmail" class="label-style">Email: </label>
+                <input type="email" class="field-style field-split" id="inputEmail" :value="fighter.Email" v-model="fighter.Email">
+              </li>
 
-    <li>
-      <label for="inputStationNum" class="label-style">Station Number: </label>
-      <input type="text" class="field-style field-split" id="inputStationNum" :value="fighter.StationNum" v-model="fighter.StationNum">
-    </li>
+              <li>
+                <label for="inputIsActive" class="label-style">Active: </label>
+                <input type="text" class="field-style field-split" id="inputIsActive" :value="fighter.IsActive" v-model="fighter.IsActive">
+              </li>
 
-    <li>
-      <label for="inputEmail" class="label-style">Email: </label>
-      <input type="email" class="field-style field-split" id="inputEmail" :value="fighter.Email" v-model="fighter.Email">
-    </li>
+              <br>
 
-    <li>
-      <label for="inputIsActive" class="label-style">Active: </label>
-      <input type="text" class="field-style field-split" id="inputIsActive" :value="fighter.IsActive" v-model="fighter.IsActive">
-    </li>
-
-    <br>
-
-    <li>
-      <input type="submit" class="field-style">
-    </li>
-  </ul>
-            </div>
+              <li>
+                <input type="submit" class="field-style">
+              </li>
+            </ul>
           </div>
         </form>
+      </div>
     </main>
 <div class="wrapper row3">
   <footer id="footer" class="clear">
