--- a/app/public/All.html
+++ b/app/public/All.html
@@ -106,72 +106,72 @@
             <ul>
               <li>
                 <label for="inputFirstName" class="label-style">First Name: </label>
-                <input type="text" id="inputFirstName" :value="fighter.FirstName" class="field-style field-split" v-model="fighter.FirstName">
+                <input type="text" id="inputFirstName" :value="fighter.FirstName" class="field-style field-split">
               </li>
 
               <li>
                 <label for="inputLastName" class="label-style">Last Name: </label>
-                <input type="text" class="field-style field-split" id="inputLastName" :value="fighter.LastName" v-model="fighter.LastName">
+                <input type="text" class="field-style field-split" id="inputLastName" :value="">
               </li>
 
               <li>
                 <label for="inputGender" class="label-style">Gender: </label>
-                <input type="text" class="field-style field-split" id="inputGender" :value="Fighter.Gender" v-model="fighter.Gender">
+                <input type="text" class="field-style field-split" id="inputGender" :value="Fighter.Gender" v>
               </li>
 
               <li>
                 <label for="inputDateOfBirth" class="label-style">Date of Birth: </label>
-                <input type="text" class="field-style field-split" id="inputDateOfBirth" :value="fighter.DateOfBirth" v-model="fighter.DateOfBirth">
+                <input type="text" class="field-style field-split" id="inputDateOfBirth" :value="fighter.DateOfBirth" v-mode>
               </li>
 
               <li>
                 <label for="inputStreet" class="label-style">Street Address: </label>
-                <input type="text" class="field-style field-split" id="inputStreet" :value="fighter.Street" v-model="fighter.Street">
+                <input type="text" class="field-style field-split" id="inputStreet" :value="fighter.Street" v>
               </li>
 
               <li>
                 <label for="inputCity" class="label-style">City: </label>
-                <input type="text" class="field-style field-split" id="inputCity" :value="fighter.City" v-model="fighter.City">
+                <input type="text" class="field-style field-split" id="inputCity" :value="fighter.City">
               </li>
 
               <li>
                 <label for="inputState" class="label-style">State: </label>
-                <input type="text" class="field-style field-split" id="inputState" :value="fighter.State" v-model="fighter.State">
+                <input type="text" class="field-style field-split" id="inputState" :value="fighter.State" >
               </li>
 
               <li>
                 <label for="inputZip" class="label-style">Zip: </label>
-                <input type="text" class="field-style field-split align-left" id="inputZip" :value="fighter.ZipCode" v-model="fighter.ZipCode">
+                <input type="text" class="field-style field-split align-left" id="inputZip" :value="fighter.ZipCode" v->
               </li>
 
               <li>
                <label for="inputWorkPhone" class="label-style">Work Phone: </label>
-               <input type="text" class="field-style field-split" id="inputWorkphone" :value="fighter.WorkNum" v-model="fighter.WorkNum">
+               <input type="text" class="field-style field-split" id="inputWorkphone" :value="fighter.WorkNum" v->
               </li>
 
               <li>
                 <label for="inputMobilePhone" class="label-style">Mobile Phone: </label>
-                <input type="text" class="field-style field-split" id="inputMobilephone" :value="fighter.MobileNum" v-model="fighter.MobileNum">
+                <input type="text" class="field-style field-split" id="inputMobilephone" :value="fighter.MobileNum" v-mo>
               </li>
 
               <li>
                 <label for="inputRadioNum" class="label-style">Radio Number: </label>
-                <input type="text" class="field-style field-split" id="inputRadioNum" :value="fighter.RadioNum" v-model="fighter.RadioNum">
+                <input type="text" class="field-style field-split" id="inputRadioNum" :value="fighter.RadioNum" v-m>
               </li>
 
               <li>
                 <label for="inputStationNum" class="label-style">Station Number: </label>
-                <input type="text" class="field-style field-split" id="inputStationNum" :value="fighter.StationNum" v-model="fighter.StationNum">
+                <input type="text" class="field-style field-split" id="inputStationNum" :value="fighter.StationNum" v-mod>
               </li>
 
               <li>
                 <label for="inputEmail" class="label-style">Email: </label>
-                <input type="email" class="field-style field-split" id="inputEmail" :value="fighter.Email" v-model="fighter.Email">
+                <input type="email" class="field-style field-split" id="inputEmail" :value="fighter.Email" >
               </li>
 
               <li>
                 <label for="inputIsActive" class="label-style">Active: </label>
-                <input type="text" class="field-style field-split" id="inputIsActive" :value="fighter.IsActive" v-model="fighter.IsActive">
+                <input type="text" class="field-style field-split" id="inputIsActive" :value="fighter.IsActive" v-m>
               </li>
 
               <br>
@@ -199,6 +199,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="js/fighter.app.js"></script>
+  <script src="js/fighterDetail.app.js"></script>
   <script src="js/tablesort.min.js"></script>
 <!-- <script>
 new Tablesort(document.getElementById('SortTask'));
