--- a/app/public/Expire.html
+++ b/app/public/Expire.html
@@ -72,7 +72,7 @@
               </tr>
             </thead>
             <tbody>
-
+              <tr v-for="e in expired">
                 <td>{{ e.FirstName }}</td>
                 <td>{{ e.LastName }}</td>
                 <td>{{ e.Name }}</td>
