working on edit

--- a/app/public/All.html
+++ b/app/public/All.html
@@ -111,22 +111,22 @@
 
               <li>
                 <label for="inputLastName" class="label-style">Last Name: </label>
-                <input type="text" class="field-style field-split" id="inputLastName" :value="">
+                <input type="text" class="field-style field-split" id="inputLastName" :value="fighter.LastName">
               </li>
 
               <li>
                 <label for="inputGender" class="label-style">Gender: </label>
-                <input type="text" class="field-style field-split" id="inputGender" :value="Fighter.Gender" v>
+                <input type="text" class="field-style field-split" id="inputGender" :value="fighter.Gender">
               </li>
 
               <li>
                 <label for="inputDateOfBirth" class="label-style">Date of Birth: </label>
-                <input type="text" class="field-style field-split" id="inputDateOfBirth" :value="fighter.DateOfBirth" v-mode>
+                <input type="text" class="field-style field-split" id="inputDateOfBirth" :value="fighter.DateOfBirth">
               </li>
 
               <li>
                 <label for="inputStreet" class="label-style">Street Address: </label>
-                <input type="text" class="field-style field-split" id="inputStreet" :value="fighter.Street" v>
+                <input type="text" class="field-style field-split" id="inputStreet" :value="fighter.Street">
               </li>
 
               <li>
@@ -136,42 +136,47 @@
 
               <li>
                 <label for="inputState" class="label-style">State: </label>
-                <input type="text" class="field-style field-split" id="inputState" :value="fighter.State" >
+                <input type="text" class="field-style field-split" id="inputState" :value="fighter.State">
               </li>
 
               <li>
                 <label for="inputZip" class="label-style">Zip: </label>
-                <input type="text" class="field-style field-split align-left" id="inputZip" :value="fighter.ZipCode" v->
+                <input type="text" class="field-style field-split align-left" id="inputZip" :value="fighter.ZipCode">
               </li>
 
               <li>
                <label for="inputWorkPhone" class="label-style">Work Phone: </label>
-               <input type="text" class="field-style field-split" id="inputWorkphone" :value="fighter.WorkNum" v->
+               <input type="text" class="field-style field-split" id="inputWorkphone" :value="fighter.WorkNum">
               </li>
 
               <li>
                 <label for="inputMobilePhone" class="label-style">Mobile Phone: </label>
-                <input type="text" class="field-style field-split" id="inputMobilephone" :value="fighter.MobileNum" v-mo>
+                <input type="text" class="field-style field-split" id="inputMobilephone" :value="fighter.MobileNum">
               </li>
 
               <li>
                 <label for="inputRadioNum" class="label-style">Radio Number: </label>
-                <input type="text" class="field-style field-split" id="inputRadioNum" :value="fighter.RadioNum" v-m>
+                <input type="text" class="field-style field-split" id="inputRadioNum" :value="fighter.RadioNum">
               </li>
 
               <li>
                 <label for="inputStationNum" class="label-style">Station Number: </label>
-                <input type="text" class="field-style field-split" id="inputStationNum" :value="fighter.StationNum" v-mod>
+                <input type="text" class="field-style field-split" id="inputStationNum" :value="fighter.StationNum">
               </li>
 
               <li>
                 <label for="inputEmail" class="label-style">Email: </label>
-                <input type="email" class="field-style field-split" id="inputEmail" :value="fighter.Email" >
+                <input type="email" class="field-style field-split" id="inputEmail" :value="fighter.Email">
+              </li>
+
+              <li>
+                <label for="inputPosition" class="label-style">Position: </label>
+                <input type="text" class="field-style field-split" id="inputPosition" :value="fighter.Position">
               </li>
 
               <li>
                 <label for="inputIsActive" class="label-style">Active: </label>
-                <input type="text" class="field-style field-split" id="inputIsActive" :value="fighter.IsActive" v-m>
+                <input type="text" class="field-style field-split" id="inputIsActive" :value="fighter.IsActive">
               </li>
 
               <br>
