--- a/app/public/certAdd.html
+++ b/app/public/certAdd.html
@@ -66,29 +66,29 @@
 
   <main>
     <div id="certRecordApp">
-      <form v-on:submit="handleSubmit">
-      <!-- <form> -->
-        <div class="wrapper row2">
-          <div id="container" class="clear">
+      <form v-on:submit="handleSubmit" class="form-style">
+        <div class="sizing">
+            <center><h4 style="text-decoration-line: underline">Add New Certifications</h4></center>
+            <br>
 
-            <div class="form-group row">
-              <label for="inputName" class="form-group col-md-6">Name</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputName" placeholder="Certification Name" v-model="recordCert.Name">
-              </div>
-            </div>
+      <ul>
+        <li>
+              <label for="inputName" class="label-style">First Name: </label>
 
-            <div class="form-group row">
-              <label for="inputCertifyAgency" class="form-group col-md-6">Agency</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputCertifyAgency" placeholder="Agency" v-model="recordCert.CertifyAgency">
-              </div>
-            </div>
+                <input type="text" id="inputName" placeholder="Certification Name" class="field-style field-split"  v-model="recordCert.Name">
+        </li>
 
-            <div class="form-group row">
-              <label for="inputExpirationPeriod" class="form-group col-md-6">Valid Time</label>
+
+      <li>
+              <label for="inputCertifyAgency" class="label-style">Certfy Agency: </label>
+
+                <input type="text" id="inputCertifyAgency" placeholder="Agency" class="field-style field-split" v-model="recordCert.CertifyAgency">
+      </li>
+
+
+              <label for="inputExpirationPeriod" class="label-style">Expiration Period: </label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputExpirationPeriod" placeholder="# Years/Months" v-model="recordCert.ExpirationPeriod">
+                <input type="text"  id="inputExpirationPeriod" placeholder="# Years/Months" class="field-style field-split" v-model="recordCert.ExpirationPeriod">
               </div>
             </div>
 
