--- a/app/public/profile.html
+++ b/app/public/profile.html
@@ -181,7 +181,7 @@
       </form>
     </div>
 
-    <strong id="error_show" size='2' style='color:red;font-size:20px; display:none'>You need to fill in all the blank!</strong>
+    <center><strong id="error_show" size='2' style='color:red;font-size:20px; display:none'>You need to fill in all the blank!</strong></center>
 
   </main>
   <div class="wrapper row3">
