--- a/app/public/Expire.html
+++ b/app/public/Expire.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>OCFR-Member</title>
+  <title>OCFR-Expire</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/layout.css" type="text/css">
